feat: ui components

--- a/playground/index.html
+++ b/playground/index.html
@@ -9,8 +9,6 @@
     <script type="module" src="../src/ui/actio.ts"></script>
   </head>
   <body>
-    <actio-modal>
-      <h1>Vite + Lit</h1>
-    </actio-modal>
+    <actio-modal></actio-modal>
   </body>
 </html>
